--- a/css/jobs.css
+++ b/css/jobs.css
@@ -177,8 +177,3 @@ display: block;
 margin-bottom: 20px;
 margin-left: 10px;
 }
-
-#form_container {
-width: 300px;
-margin: 0px 10px;
-}
